# Makefile-project

./: INSTALL.md  LICENSE  Makefile.am  README.md  configure.ac
my_inc/: Makefile.am  kwadrat.c  kwadrat.h  szescian.c  szescian.h
src/: Makefile.am  main.c
