# Inicjalizacja AC: (nazwa,wersja)
AC_INIT([Zad2],[1.0])
# Inicjalizacja Automake
AM_INIT_AUTOMAKE
# Uzywanie bibliotek
AC_PROG_RANLIB
# Sprawdzanie kompilatora
AC_LANG(C)
# Ustawiamy kompilator jezyka C
AC_PROG_CC
# Prezycujemy gdzie Automake ma zostac utworzony
AC_CONFIG_FILES([Makefile  my_inc/Makefile src/Makefile])
# Utworzenie skryptu konfigurujacego
AC_OUTPUT
