# Inicjalizacja AC: (nazwa,wersja)
AC_INIT([Zad2],[1.0])
# Inicjalizacja Automake
AM_INIT_AUTOMAKE
# Inicjalizacja Libtoola
LT_INIT
AC_CONFIG_MACRO_DIRS([m4])
# Sprawdzanie kompilatora
AC_LANG(C)
# Ustawiamy kompilator jezyka C
AC_PROG_CC
# Precyzujemy gdzie Automake ma zostac utworzony
AC_CONFIG_FILES([Makefile  my_inc/Makefile src/Makefile])
# Utworzenie skryptu konfigurujacego
AC_OUTPUT
